# releaser

./: .gitignore  .pre-commit-config.yaml  .pylintrc  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: lint.yaml  release.yaml  test.yaml
src/releaser/: __init__.py  cli.py
src/releaser/core/: __init__.py  confluenceclient.py  gitclient.py  jiraclient.py
tests/: test_confluenceclient.py  test_gitclient.py  test_jiraclient.py
