[metadata]
name = releaser
version = attr: releaser.__version__
author = Christophe Le Douarec
author_email = ledouarec@gmail.com
description = Swiss knife tool for release management
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cledouarec/releaser
license = Apache License 2.0
license_files = LICENSE
keywords = release note git jira confluence atlassian
classifiers =
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Environment :: Console
    Topic :: Utilities

[options]
zip_safe = False
include_package_data = True
packages = find:
package_dir =
    =src
install_requires =
    atlassian-python-api
    Click
    gitpython
    pydantic
    PyPDF2
    PyYAML

[options.packages.find]
where = src

[options.extras_require]
dev =
    coverage
    pre-commit
    pylint
    pytest
    pytest-cov

[options.entry_points]
console_scripts =
    releaser = releaser.cli:main

[aliases]
test=pytest

[flake8]
ignore = W503
max-line-length = 79
# max-complexity = 18
select = B,C,E,F,W,T4,B9
